Made some progress on stdin. Reads from ft_ssl in a while loop

--- a/srcs/ft_printf/Makefile
+++ b/srcs/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: mbutt <marvin@42.fr>                       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/08/07 15:20:38 by mbutt             #+#    #+#              #
-#    Updated: 2019/11/11 16:15:34 by mbutt            ###   ########.fr        #
+#    Updated: 2019/11/13 14:54:32 by mbutt            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -57,6 +57,7 @@ MINI_LIBFT = srcs/mini_libft/ft_atoi.c			\
 			 srcs/mini_libft/ft_strcmp.c \
 			 srcs/mini_libft/ft_strdup.c \
 			 srcs/mini_libft/ft_putstr.c \
+			 srcs/mini_libft/ft_strjoin.c \
 
 OBJ = *.o
 
